# aqc-research

./: .cz.toml  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECIATION.md  FILEMAP.md  INSTALL.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tox.ini
aqc_research/: __init__.py  checking.py  circuit_structures.py  circuit_transform.py  core_op_matrix.py  core_operations.py  elementary_operations.py  job_executor.py  mps_dot_objective.py  mps_operations.py  optimizer.py  parametric_circuit.py  target_generator.py  utils.py
aqc_research/model_sketching/: aqc_coord_descent.py  aqc_sketching.py  sk_core.py  sk_utils.py
aqc_research/model_sp_lhs/: objective_base.py  objective_lhs_sur_fast_mps_trotter.py  objective_lhs_sur_max.py  time_evol_best_init.py  user_options.py
aqc_research/model_sp_lhs/trotter/: target_states.py  trotter.py  trotter_evol_utils.py  trotter_plots.py
test/: __init__.py  test_circuit_transform.py  test_core_op_matrix.py  test_core_operations.py  test_dot_gradient.py  test_mps_fast_dot_gradient.py  test_mps_operations.py  test_sp_objective_base.py  test_trotter.py  test_trotter_initial_point.py  test_trotter_targets.py  utils_dot_gradient_test.py  utils_for_testing.py
